# smol-potat

./: Cargo.toml  README.md
benches/: basic.rs
examples/: main-multi-threads.rs  main.rs
smol-potat-derive/: Cargo.toml
smol-potat-derive/src/: lib.rs
smol-potat-macro/: Cargo.toml  README.md
smol-potat-macro/src/: lib.rs
src/: lib.rs
tests/: hygiene.rs  test.rs
