[package]
name = "smol-potat-macro"
description = "Proc macro for smol runtime."
license = "MIT OR Apache-2.0"
version = "0.6.0"
authors = ["YuWeiWu <wusyong9104@gmail.com>"]
edition = "2018"
repository = "https://github.com/wusyong/smol-potat"
homepage = "https://github.com/wusyong/smol-potat"
documentation = "https://docs.rs/smol-potat"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.24"
syn = { version = "1.0", features = ["full"] }
quote = "1.0"

[features]
auto = []
